@@ -10,26 +10,26 @@ import org.everit.json.schema.ValidationException;
 import org.everit.json.schema.loader.SchemaLoader;
 import org.json.JSONException;
 import org.json.JSONObject;
-import org.opencdmp.evaluatorbase.enums.EvaluatorEntityType;
+import org.opencdmp.commonmodels.enums.PluginEntityType;
 import org.opencdmp.evaluatorbase.enums.RankType;
 import org.opencdmp.evaluatorbase.enums.SuccessStatus;
+import org.opencdmp.evaluatorbase.interfaces.BenchmarkConfiguration;
 import org.opencdmp.evaluatorbase.interfaces.EvaluatorClient;
 import org.opencdmp.evaluatorbase.interfaces.EvaluatorConfiguration;
 import org.opencdmp.evaluatorbase.interfaces.SelectionConfiguration;
-import org.opencdmp.evaluatorbase.models.misc.RankModel;
-import org.opencdmp.evaluatorbase.models.misc.RankConfig;
+import org.opencdmp.evaluatorbase.models.misc.*;
 import org.opencdmp.commonmodels.models.description.DescriptionModel;
 import org.opencdmp.commonmodels.models.plan.PlanModel;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationContext;
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.stereotype.Component;
 import org.springframework.web.context.annotation.RequestScope;
-import org.springframework.util.ResourceUtils;
 
 import javax.management.InvalidApplicationException;
-import java.io.FileInputStream;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.util.*;
 
@@ -39,59 +39,103 @@ public class EvaluatorService implements EvaluatorClient {
 
     private static final LoggerService logger = new LoggerService(LoggerFactory.getLogger(EvaluatorService.class));
     private final EvaluatorRdaMaDmpServiceProperties evaluatorRdaMaDmpServiceProperties;
+    private final ResourceLoader resourceLoader;
 
     private byte[] logo;
 
     @Autowired
-    public EvaluatorService(EvaluatorRdaMaDmpServiceProperties evaluatorRdaMaDmpServiceProperties) {
+    public EvaluatorService(ResourceLoader resourceLoader, EvaluatorRdaMaDmpServiceProperties evaluatorRdaMaDmpServiceProperties) {
         this.evaluatorRdaMaDmpServiceProperties = evaluatorRdaMaDmpServiceProperties;
+        this.resourceLoader = resourceLoader;
     }
 
 
     @Override
-    public RankModel rankPlan(PlanModel plan) throws InvalidApplicationException, IOException, InvalidTypeException {
-        if (plan == null || plan.getRdaJsonFile() == null ||  plan.getRdaJsonFile().getFile() == null) throw new MyApplicationException("rda file not found!");
+    public RankResultModel rankPlan(PlanEvaluationModel plan) throws InvalidApplicationException, IOException, InvalidTypeException {
+        if (plan == null || plan.getPlanModel() == null || plan.getPlanModel().getRdaJsonFile() == null ||  plan.getPlanModel().getRdaJsonFile().getFile() == null) throw new MyApplicationException("rda file not found!");
 
-        RankModel rankModel = new RankModel();
-        Map<String, String> messages = new HashMap<>();
+        if (plan.getBenchmarkIds() == null || plan.getBenchmarkIds().isEmpty()) throw new MyApplicationException("benchmark ids are empty!");
+
+        RankResultModel rankModel = new RankResultModel();
         rankModel.setRank(1);
 
-        JSONObject rawSchema = null;
-        JSONObject planRdaJsonFile = null;
-        try {
-            planRdaJsonFile = new JSONObject(new String(plan.getRdaJsonFile().getFile(), StandardCharsets.UTF_8));
+        List<EvaluationResultModel> results = new ArrayList<>();
+        for (String benchmarkId: plan.getBenchmarkIds()) {
 
-            InputStream is = new FileInputStream(ResourceUtils.getFile(this.evaluatorRdaMaDmpServiceProperties.getRdaSchema()));
-            String jsonTxt = IOUtils.toString(is, StandardCharsets.UTF_8);
-            rawSchema = new JSONObject(jsonTxt);
-        } catch (JSONException e) {
-            throw new RuntimeException(e);
-        }
+            BenchmarkConfiguration benchmarkConfiguration = this.evaluatorRdaMaDmpServiceProperties.getAvailableBenchmarks().stream().filter(x -> x.getId().equals(benchmarkId)).findFirst().orElse(null);
 
-        SchemaLoader loader = SchemaLoader.builder()
-                .schemaJson(rawSchema)
-                .draftV7Support()
-                .build();
-        Schema schema = loader.load().build();
-        if (schema == null) throw new MyApplicationException("json schema not found");
+            if (benchmarkConfiguration == null) throw new MyApplicationException("not found benchmark config with id " + benchmarkId);
 
-        try {
-            schema.validate(planRdaJsonFile);
-        } catch (ValidationException e) {
-            rankModel.setRank(0);
-            int i = 0;
-            for (String error: e.getAllMessages()) {
-                messages.put("Error " + (i+1), error);
-                i++;
+            if (!benchmarkConfiguration.getAppliesTo().contains(PluginEntityType.Plan)) throw new MyApplicationException("benchmark don't apply to plan");
+
+
+            EvaluationResultModel benchmarkResult = new EvaluationResultModel();
+            benchmarkResult.setBenchmarkTitle(benchmarkConfiguration.getLabel());
+            benchmarkResult.setRank(1);
+
+            JSONObject rawSchema = null;
+            JSONObject planRdaJsonFile = null;
+            try {
+                planRdaJsonFile = new JSONObject(new String(plan.getPlanModel().getRdaJsonFile().getFile(), StandardCharsets.UTF_8));
+
+                try {
+                    Resource resource = this.resourceLoader.getResource(this.evaluatorRdaMaDmpServiceProperties.getRdaSchema());
+                    if (!resource.isReadable()) return null;
+                    try (InputStream inputStream = resource.getInputStream()) {
+                        String jsonTxt = IOUtils.toString(inputStream, StandardCharsets.UTF_8);
+                        rawSchema = new JSONObject(jsonTxt);
+                    }
+                } catch (IOException e) {
+                    logger.error(e.getMessage(), e);
+                    throw new RuntimeException(e);
+                }
+            } catch (JSONException e) {
+                throw new RuntimeException(e);
             }
-        }
 
-        if (!messages.isEmpty()) rankModel.setMessages(messages);
+            SchemaLoader loader = SchemaLoader.builder()
+                    .schemaJson(rawSchema)
+                    .draftV7Support()
+                    .build();
+            Schema schema = loader.load().build();
+            if (schema == null) throw new MyApplicationException("json schema not found");
+
+            List<EvaluationResultMetricModel> metrics = new ArrayList<>();
+            List<EvaluationResultMessageModel> message = new ArrayList<>();
+            EvaluationResultMetricModel metric = new EvaluationResultMetricModel();
+
+            try {
+                schema.validate(planRdaJsonFile);
+                metric.setRank(1);
+            } catch (ValidationException e) {
+                metric.setRank(0);
+                rankModel.setRank(0);
+                benchmarkResult.setRank(0);
+                int i = 1;
+                for (String error : e.getAllMessages()) {
+                    EvaluationResultMessageModel errorMessage = new EvaluationResultMessageModel();
+                    errorMessage.setTitle("Error " + i);
+                    errorMessage.setMessage(error);
+                    i++;
+
+                    message.add(errorMessage);
+                    metric.setMessages(message);
+
+                }
+            }
+            metrics.add(metric);
+
+            benchmarkResult.setMetrics(metrics);
+            results.add(benchmarkResult);
+            rankModel.setResults(results);
+        }
+        if (!results.isEmpty()) rankModel.setResults(results);
+
         return rankModel;
     }
 
     @Override
-    public RankModel rankDescription(DescriptionModel description) throws InvalidApplicationException, IOException {
+    public RankResultModel rankDescription(DescriptionEvaluationModel description) throws InvalidApplicationException, IOException {
         throw new UnsupportedOperationException("rank description not supported");
     }
 
@@ -99,9 +143,11 @@ public class EvaluatorService implements EvaluatorClient {
     public EvaluatorConfiguration getConfiguration() {
         EvaluatorConfiguration evaluatorConfiguration = new EvaluatorConfiguration();
         evaluatorConfiguration.setEvaluatorId(evaluatorRdaMaDmpServiceProperties.getEvaluatorId());
-        evaluatorConfiguration.setEvaluatorEntityTypes(Arrays.asList(EvaluatorEntityType.Plan));
+        evaluatorConfiguration.setEvaluatorEntityTypes(List.of(PluginEntityType.Plan));
         evaluatorConfiguration.setUseSharedStorage(evaluatorRdaMaDmpServiceProperties.isUseSharedStorage());
         evaluatorConfiguration.setHasLogo(this.evaluatorRdaMaDmpServiceProperties.getHasLogo());
+        evaluatorConfiguration.setConfigurationFields(this.evaluatorRdaMaDmpServiceProperties.getConfigurationFields());
+        evaluatorConfiguration.setUserConfigurationFields(this.evaluatorRdaMaDmpServiceProperties.getUserConfigurationFields());
         evaluatorConfiguration.setRankConfig(new RankConfig());
         evaluatorConfiguration.getRankConfig().setRankType(RankType.Selection);
         evaluatorConfiguration.getRankConfig().setSelectionConfiguration(new SelectionConfiguration());
@@ -113,6 +159,8 @@ public class EvaluatorService implements EvaluatorClient {
         valueSetFail.setKey(0);
         valueSetFail.setSuccessStatus(SuccessStatus.Fail);
         evaluatorConfiguration.getRankConfig().getSelectionConfiguration().setValueSetList(Arrays.asList(valueSetSuccess, valueSetFail));
+
+        evaluatorConfiguration.setAvailableBenchmarks(this.evaluatorRdaMaDmpServiceProperties.getAvailableBenchmarks());
         return evaluatorConfiguration;
     }
 
@@ -121,9 +169,9 @@ public class EvaluatorService implements EvaluatorClient {
         if(this.evaluatorRdaMaDmpServiceProperties != null && this.evaluatorRdaMaDmpServiceProperties.getHasLogo() && this.evaluatorRdaMaDmpServiceProperties.getLogo() != null && !this.evaluatorRdaMaDmpServiceProperties.getLogo().isBlank()){
             if(this.logo == null){
                 try{
-                    java.io.File logoFile = ResourceUtils.getFile(this.evaluatorRdaMaDmpServiceProperties.getLogo());
-                    if(!logoFile.exists()) return null;
-                    try(InputStream inputStream = new FileInputStream(logoFile)) {
+                    Resource resource = this.resourceLoader.getResource(this.evaluatorRdaMaDmpServiceProperties.getLogo());
+                    if(!resource.isReadable()) return null;
+                    try(InputStream inputStream = resource.getInputStream()) {
                         this.logo = inputStream.readAllBytes();
                     }
                 } catch (IOException e) {
